--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,11 @@ dist
 
 # TernJS port file
 .tern-port
+
+#lock
+package-lock.json
+yarn.lock
+
+# packages
+packages/util/**/lib
+packages/util/**/esm
