--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/GavinBirkhoff/util.git"
   },
-  "keywords": ["util"],
+  "keywords": [
+    "util"
+  ],
   "author": "Gavin Birkhoff <gavinbirkhoff@gmail.com>",
   "license": "MIT",
   "bugs": {
@@ -18,6 +20,15 @@
   },
   "homepage": "https://github.com/GavinBirkhoff/util#readme",
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "@types/node": "^15.12.2",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "eslint": "^7.28.0",
+    "lerna": "^4.0.0",
+    "npm-run-all": "^4.1.5",
+    "ts-node": "^10.0.0",
+    "tslint": "^6.1.3",
+    "tslint-config-airbnb": "^5.11.2",
+    "typescript": "^4.3.2"
   }
 }
