--- a/package.json
+++ b/package.json
@@ -4,7 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "eslint": "eslint --ext .js,.ts --fix ./packages/**/src"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "npm run eslint",
+      "prettier .prettierrc.js --write",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -20,12 +32,18 @@
   },
   "homepage": "https://github.com/GavinBirkhoff/util#readme",
   "devDependencies": {
+    "@babel/eslint-parser": "^7.14.5",
     "@types/node": "^15.12.2",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
     "lerna": "^4.0.0",
+    "lint-staged": "^11.0.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.1",
     "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
     "tslint-config-airbnb": "^5.11.2",
