--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,8 @@
  ],
  "[typescript]": {
   "editor.defaultFormatter": "esbenp.prettier-vscode"
- },
+},
+"editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+},
 }
