--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "lerna run build",
     "eslint": "eslint --ext .js,.ts --fix ./packages/**/src",
     "tslint": "tslint ./packages/**/*.ts",
-    "tslint-fix": "tslint ./packages/**/*.ts --fix"
+    "tslint-fix": "tslint ./packages/**/*.ts --fix",
+    "test": "lerna run test"
   },
   "husky": {
     "hooks": {
@@ -36,7 +37,13 @@
   },
   "homepage": "https://github.com/GavinBirkhoff/util#readme",
   "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
@@ -44,10 +51,12 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^6.0.0",
+    "jest": "^27.0.4",
     "lerna": "^4.0.0",
     "lint-staged": "^11.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.1",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
     "tslint-config-airbnb": "^5.11.2",
