--- a/.babelrc
+++ b/.babelrc
@@ -4,9 +4,7 @@
   ],
   "env": {
     "test": {
-      "plugins": [
-        "@babel/plugin-transform-modules-commonjs"
-      ]
+      "plugins": []
     }
   }
 }
