--- a/packages/dom-util/package.json
+++ b/packages/dom-util/package.json
@@ -13,7 +13,14 @@
     "README.md"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "build": "npm run clean && run-p build:*",
+    "build:esm": "tsc -p tsconfig.json --target ES5 --module ESNext --outDir esm",
+    "build:cjs": "tsc -p tsconfig.json --target ES5 --module commonjs --outDir lib",
+    "clean": "rm -rf lib && rm -rf esm",
+    "tsc": "tsc --noEmit",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "script:gen-index": "node ./scripts/generate-index.js"
   },
   "keywords": [],
   "author": "Gavin Birkhoff <gavinbirkhoff@gmail.com>",
