--- a/packages/dom-util/package.json
+++ b/packages/dom-util/package.json
@@ -21,6 +21,7 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "script:gen-index": "node ./scripts/generate-index.js",
+    "a-i": "run script:gen-index",
     "docs": "jsdoc -c jsdoc.json"
   },
   "keywords": [],
