--- a/packages/dom-util/tsconfig.json
+++ b/packages/dom-util/tsconfig.json
@@ -3,6 +3,10 @@
     "compilerOptions": {
       "outDir": "lib"
     },
+    // "lib": [
+    //   "DOM",
+    //   "ES6"
+    // ],
     "include": ["src"],
     // "exclude": ["**/__test__/**"]
   }
