--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "tslint-fix": "tslint ./packages/**/*.ts --fix",
     "test": "lerna run test",
     "script:gen-index": "lerna run script:gen-index",
-    "a-i": "lerna run script:gen-index"
+    "gi": "lerna run script:gen-index"
   },
   "husky": {
     "hooks": {
@@ -49,6 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "babel-jest": "^27.0.2",
+    "docdash": "^1.2.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
@@ -64,6 +65,5 @@
     "tslint": "^6.1.3",
     "tslint-config-airbnb": "^5.11.2",
     "typescript": "^4.3.2"
-  },
-  "dependencies": {}
+  }
 }
