--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "tslint": "tslint ./packages/**/*.ts",
     "tslint-fix": "tslint ./packages/**/*.ts --fix",
     "test": "lerna run test",
+    "test:coverage": "lerna run test:coverage",
     "script:gen-index": "lerna run script:gen-index",
-    "gi": "lerna run script:gen-index"
+    "gi": "lerna run script:gen-index",
+    "docs": "lerna run docs",
+    "pb": "lerna publish"
   },
   "husky": {
     "hooks": {
@@ -58,6 +61,8 @@
     "husky": "^6.0.0",
     "jest": "^27.0.4",
     "jest-html-reporter": "^3.4.1",
+    "jsdoc": "^3.6.10",
+    "jsdoc-to-markdown": "^7.1.1",
     "lerna": "^4.0.0",
     "lint-staged": "^11.0.0",
     "npm-run-all": "^4.1.5",
