--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "lint-staged": {
     "*.{ts,tsx}": [
       "npm run eslint",
-      "prettier .prettierrc.js --write",
-      "git add"
+      "prettier .prettierrc.js --write"
     ]
   },
   "repository": {
