--- a/packages/dom-util/package.json
+++ b/packages/dom-util/package.json
@@ -29,6 +29,7 @@
     "url": "https://github.com/GavinBirkhoff/util/issues"
   },
   "dependencies": {
-    "util4js": "^1.0.2-alpha.0"
-  }
+    "util4j": "^1.0.2-alpha.0"
+  },
+  "gitHead": "8066f445929a03bc27070f7eb4caea274ae2f92c"
 }
