--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "util4js",
+  "name": "util4j",
   "version": "1.0.2-alpha.0",
   "description": "A common util collection",
   "main": "lib/index.js",
@@ -34,5 +34,6 @@
   "devDependencies": {
     "docdash": "^1.2.0",
     "jsdoc-to-markdown": "^7.1.1"
-  }
+  },
+  "gitHead": "8066f445929a03bc27070f7eb4caea274ae2f92c"
 }
