--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prebuild": "npm install && lerna bootstrap",
     "bootstrap": "lerna bootstrap",
     "clean": "lerna clean",
-    "build": "lerna run build",
+    "build": "npm run gi lerna run build",
     "eslint": "eslint --ext .js,.ts --fix ./packages/**/src",
     "tslint": "tslint ./packages/**/*.ts",
     "tslint-fix": "tslint ./packages/**/*.ts --fix",
