--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -12,7 +12,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "npm run clean && npm run script:gen-index && run-p build:* && npm run docs",
+    "build": "npm run clean && npm run script:gen-index && run-p build:*",
     "build:esm": "tsc -p tsconfig.json --target ES5 --module ESNext --outDir esm",
     "build:cjs": "tsc -p tsconfig.json --target ES5 --module commonjs --outDir lib",
     "clean": "rm -rf lib && rm -rf esm",
@@ -20,7 +20,7 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "script:gen-index": "node ./scripts/generate-index.js",
-    "docs": "jsdoc -c jsdoc.json",
+    "docs": "npm run build:esm && jsdoc -c jsdoc.json",
     "md": "node ./scripts/jsdoc2md.js"
   },
   "keywords": [
