--- a/packages/dom-util/package.json
+++ b/packages/dom-util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "util4dom",
-  "version": "1.0.3-alpha.0",
+  "version": "1.1.0",
   "description": "A common util collection",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -29,7 +29,7 @@
     "url": "https://github.com/GavinBirkhoff/util/issues"
   },
   "dependencies": {
-    "util4j": "^1.0.2-alpha.0"
+    "util4j": "^1.1.0"
   },
   "gitHead": "8066f445929a03bc27070f7eb4caea274ae2f92c",
   "devDependencies": {
