--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "script:gen-index": "lerna run script:gen-index",
     "gi": "lerna run script:gen-index",
     "docs": "lerna run docs",
-    "pb": "lerna publish from-package"
+    "pb": "lerna publish from-package",
+    "dev": "webpack-dev-server --progress"
   },
   "husky": {
     "hooks": {
@@ -44,19 +45,23 @@
   "homepage": "https://github.com/GavinBirkhoff/util#readme",
   "devDependencies": {
     "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
+    "@babel/core": "^7.21.0",
     "@babel/eslint-parser": "^7.14.5",
-    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.14.5",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "babel-jest": "^27.0.2",
+    "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "core-js": "^3.29.0",
     "docdash": "^1.2.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^6.0.0",
     "jest": "^27.0.4",
     "jest-html-reporter": "^3.4.1",
@@ -67,9 +72,13 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.1",
     "ts-jest": "^27.0.3",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
     "tslint-config-airbnb": "^5.11.2",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
