--- a/package.json
+++ b/package.json
@@ -32,17 +32,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/GavinBirkhoff/util.git"
+    "url": "git+https://github.com/GavinBirkhoff/toolkit.git"
   },
   "keywords": [
-    "util"
+    "util",
+    "toolkit",
+    "dom",
+    "dom-toolkit",
+    "es",
+    "es-toolkit",
+    "ts-toolkit",
+    "javascript",
+    "typescript"
   ],
   "author": "Gavin Birkhoff <gavinbirkhoff@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/GavinBirkhoff/util/issues"
+    "url": "https://github.com/GavinBirkhoff/toolkit/issues"
   },
-  "homepage": "https://github.com/GavinBirkhoff/util#readme",
+  "homepage": "https://github.com/GavinBirkhoff/toolkit#readme",
   "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.21.0",
