--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "jsdoc-to-markdown": "^7.1.1",
     "lerna": "^4.0.0",
     "lint-staged": "^11.0.0",
+    "markdown-toc": "^1.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.1",
     "ts-jest": "^27.0.3",
@@ -85,6 +86,8 @@
     "ts-node": "^10.0.0",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.2",
+    "typedoc": "^0.23.28",
+    "typedoc-plugin-markdown": "^3.14.0",
     "typescript": "^4.3.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
