--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.14.5",
     "@types/jest": "^26.0.23",
+    "@types/jsdom": "^21.1.1",
     "@types/node": "^15.12.2",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
@@ -76,6 +77,7 @@
     "jest-html-reporter": "^3.4.1",
     "jsdoc": "^3.6.10",
     "jsdoc-to-markdown": "^7.1.1",
+    "jsdom": "^16.7.0",
     "lerna": "^4.0.0",
     "lint-staged": "^11.0.0",
     "markdown-toc": "^1.2.0",
