--- a/packages/domkit/package.json
+++ b/packages/domkit/package.json
@@ -20,7 +20,9 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "script:gen-index": "node ./scripts/generate-index.js",
-    "docs": "npm run build:esm && jsdoc -c jsdoc.json"
+    "docs": "npm run build:esm && jsdoc -c jsdoc.json",
+    "doc": "typedoc --tsconfig ./tsconfig.json",
+    "update:readme": "node ./scripts/update-docs.js"
   },
   "keywords": [
     "dom",
