--- a/packages/eskit/tsconfig.json
+++ b/packages/eskit/tsconfig.json
@@ -1,8 +1,18 @@
 {
-    "extends": "../../tsconfig.json",
-    "compilerOptions": {
-      "outDir": "lib"
-    },
-    "include": ["src"],
-    // "exclude": ["**/__test__/**"]
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "lib"
+  },
+  "include": ["src"],
+  // "exclude": ["**/__test__/**"]
+  "typedocOptions": {
+    "entryPoints": ["src/index.ts"],
+    "includes": ["src/*.ts"],
+    "exclude": ["**/*.test.ts"],
+    "out": "docs",
+    "readme": "none",
+    "includeVersion": true,
+    "disableSources": false,
+    "plugin": ["typedoc-plugin-markdown"]
   }
+}
