--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "javascript",
     "typescript"
   ],
-  "author": "Gavin Birkhoff <gavinbirkhoff@gmail.com>",
+  "author": {
+    "name": "GavinBirkhoff",
+    "email": "gavinbirkhoff@gmail.com"
+  },
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.14.5",
@@ -50,6 +53,7 @@
     "@babel/eslint-parser": "^7.14.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.14.5",
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/jest": "^26.0.23",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^15.12.2",
