--- a/packages/domkit/package.json
+++ b/packages/domkit/package.json
@@ -34,7 +34,10 @@
     "toolkit",
     "tool"
   ],
-  "author": "Gavin Birkhoff <gavinbirkhoff@gmail.com>",
+  "author": {
+    "name": "GavinBirkhoff",
+    "email": "gavinbirkhoff@gmail.com"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/GavinBirkhoff/toolkit/issues"
