--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,7 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = space
 indent_size  = 2
+quote_type = single
 
 [Makefile]
 indent_style = tab
@@ -19,3 +20,7 @@ indent_size  = 1
 [*.md]
 trim_trailing_whitespace = false
 indent_size = 4
+
+[{package.json,.travis.yml}]
+indent_style = space
+indent_size = 2
