--- a/package.json
+++ b/package.json
@@ -57,16 +57,12 @@
     "@types/jest": "^26.0.23",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^15.12.2",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
     "babel-jest": "^27.0.2",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.29.0",
     "docdash": "^1.2.0",
-    "eslint": "^7.28.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-config-lavy": "^1.0.1-Alpha.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^6.0.0",
     "jest": "^27.0.4",
@@ -75,19 +71,16 @@
     "jsdoc": "^3.6.10",
     "jsdoc-to-markdown": "^7.1.1",
     "jsdom": "^16.7.0",
+    "lavy": "^1.0.1-Alpha.2",
     "lerna": "^4.0.0",
     "lint-staged": "^11.0.0",
     "markdown-toc": "^1.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.1",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.0.0",
-    "tslint": "^5.11.0",
-    "tslint-config-airbnb": "^5.11.2",
     "typedoc": "^0.23.28",
     "typedoc-plugin-markdown": "^3.14.0",
-    "typescript": "^4.3.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
