--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/jest": "^26.0.23",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^15.12.2",
+    "ajv": "^7.2.4",
     "babel-jest": "^27.0.2",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
